tokens and style start

--- a/assets/style/layouts/container/_index.scss
+++ b/assets/style/layouts/container/_index.scss
@@ -15,6 +15,9 @@
   @media (min-width: $screen-lg-min) {
     width: $container-lg;
   }
+  @media (min-width: $screen-hd-min) {
+    width: $container-hd;
+  }
 }
 
 
