--- a/assets/tokens/breakpoints/_variables-media.scss
+++ b/assets/tokens/breakpoints/_variables-media.scss
@@ -7,9 +7,9 @@ $screen-xs-min:              480px !default;
 $screen-sm-min:              768px !default;
 $screen-md-min:              992px !default;
 $screen-lg-min:              1200px !default;
-$screen-ws-min:              1408px !default;
+$screen-hd-min:              1408px !default;
 
 $screen-xs-max:              767px !default;
 $screen-sm-max:              991px !default;
 $screen-md-max:              1199px !default;
-$screen-lg-max:              1407px !default;
+$screen-hd-max:              1407px !default;
