--- a/assets/style/layouts/grid/_mixin.scss
+++ b/assets/style/layouts/grid/_mixin.scss
@@ -6,8 +6,9 @@
 
 // Creates a wrapper for a series of columns
 @mixin make-row($gutter: $grid-gutter-width) {
-  margin-left:  ceil(($gutter / -2));
+  margin-left:  ceil(($gutter/ -2));
   margin-right: floor(($gutter / -2));
+  // margin-right: $gutter/2;
   @include clearfix;
 }
 
@@ -23,12 +24,12 @@
 @mixin make-xs-column-offset($columns) {
   margin-left: percentage(($columns / $grid-columns));
 }
-@mixin make-xs-column-push($columns) {
-  left: percentage(($columns / $grid-columns));
-}
-@mixin make-xs-column-pull($columns) {
-  right: percentage(($columns / $grid-columns));
-}
+// @mixin make-xs-column-push($columns) {
+//   left: percentage(($columns / $grid-columns));
+// }
+// @mixin make-xs-column-pull($columns) {
+//   right: percentage(($columns / $grid-columns));
+// }
 
 // Generate the small columns
 @mixin make-sm-column($columns, $gutter: $grid-gutter-width) {
