--- a/assets/tokens/grid/_variables-grid.scss
+++ b/assets/tokens/grid/_variables-grid.scss
@@ -1,3 +1,4 @@
+
 //== Grid system
 //
 //## Define your custom responsive grid.
@@ -11,3 +12,23 @@ $grid-gutter-width:         30px !default;
 $grid-float-breakpoint:     $screen-sm-min !default;
 //** Point at which the navbar begins collapsing.
 $grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
+
+// Small screen / tablet
+$container-tablet:             (720px + $grid-gutter-width) !default;
+//** For `$screen-sm-min` and up.
+$container-sm:                 $container-tablet !default;
+
+// Medium screen / desktop
+$container-desktop:            (940px + $grid-gutter-width) !default;
+//** For `$screen-md-min` and up.
+$container-md:                 $container-desktop !default;
+
+// Large screen / wide desktop
+$container-large-desktop:      (1140px + $grid-gutter-width) !default;
+//** For `$screen-lg-min` and up.
+$container-lg:                 $container-large-desktop !default;
+
+// Large screen / wide desktop
+$container-large-hd:      (1348px + $grid-gutter-width) !default;
+//** For `$screen-lg-min` and up.
+$container-hd:                 $container-large-hd !default;
