--- a/assets/tokens/line-height/index.scss
+++ b/assets/tokens/line-height/index.scss
@@ -1,8 +1,8 @@
 
 // Unitless line-heights for reusability
-$line-height-base: 1.45;
+$line-height-base: 1.45em;
 // Unitless line-heights for reusability
-$line-height-computed: 1.45;
-$headings-line-height: 1.1;
-$line-height-large: 1.3333333;
-$line-height-small: 1.5;
+$line-height-computed: 1.45em;
+$headings-line-height: 1.1em;
+$line-height-large: 1.3333333em;
+$line-height-small: 1.5em;
