--- a/assets/tokens/color-text/index.custom-properties.css
+++ b/assets/tokens/color-text/index.custom-properties.css
@@ -1,10 +1,13 @@
 
 :root {
-  --text-color: rgb(51, 51, 51);
-  --link-color: rgb(51, 122, 183);
-  --link-hover-color: rgb(35, 82, 124);
-  --text-muted: rgb(119, 119, 119);
   --headings-small-color: rgb(119, 119, 119);
-  --blockquote-small-color: rgb(119, 119, 119);
-  --headings-color: rgb(119, 119, 119);
+  --text-color: rgb(51, 51, 51);
+  --text-muted: rgb(119, 119, 119);
+  --text-color-light: rgb(119, 119, 119);
+  --state-info-text: rgb(49, 112, 143);
+  --link-color: rgb(51, 122, 183);
+  --state-success-text: rgb(60, 118, 61);
+  --state-warning-text: rgb(138, 109, 59);
+  --state-danger-text: rgb(169, 68, 66);
+  --link-hover-color: rgb(35, 82, 124);
 }
