--- a/assets/tokens/line-height/index.cssmodules.css
+++ b/assets/tokens/line-height/index.cssmodules.css
@@ -1,8 +1,8 @@
 
 /* Unitless line-heights for reusability */
-@value line-height-base: 1.45;
+@value line-height-base: 1.45em;
 /* Unitless line-heights for reusability */
-@value line-height-computed: 1.45;
-@value headings-line-height: 1.1;
-@value line-height-large: 1.3333333;
-@value line-height-small: 1.5;
+@value line-height-computed: 1.45em;
+@value headings-line-height: 1.1em;
+@value line-height-large: 1.3333333em;
+@value line-height-small: 1.5em;
