--- a/assets/style/elements/hr/build.css
+++ b/assets/style/elements/hr/build.css
@@ -1,5 +1,5 @@
 hr {
-  margin-top: 1.45;
-  margin-bottom: 1.45;
+  margin-top: 1.45em;
+  margin-bottom: 1.45em;
   border: 0;
   border-top: 1px solid #eeeeee; }
