--- a/assets/tokens/font-size/index.cssmodules.css
+++ b/assets/tokens/font-size/index.cssmodules.css
@@ -8,4 +8,4 @@
 @value font-size-h4: 1.25em;
 @value font-size-h5: 16px;
 @value font-size-h6: .85em;
-@value font-size-base: 16px;
+@value font-size-base: 1em;
