--- a/assets/tokens/font-size/index.scss
+++ b/assets/tokens/font-size/index.scss
@@ -8,4 +8,4 @@ $font-size-h3: 1.7em;
 $font-size-h4: 1.25em;
 $font-size-h5: 16px;
 $font-size-h6: .85em;
-$font-size-base: 16px;
+$font-size-base: 1em;
