--- a/assets/tokens/spacing/index.scss
+++ b/assets/tokens/spacing/index.scss
@@ -1,9 +1,9 @@
 
-$padding-base-vertical: 6px;
-$padding-base-horizontal: 12px;
-$padding-large-vertical: 10px;
-$padding-large-horizontal: 16px;
-$padding-small-vertical: 5px;
-$padding-small-horizontal: 10px;
-$padding-xs-vertical: 1px;
-$padding-xs-horizontal: 5px;
+$padding-base-vertical: 0.375em;
+$padding-base-horizontal: 0.75em;
+$padding-large-vertical: 0.625em;
+$padding-large-horizontal: 1em;
+$padding-small-vertical: 0.3125em;
+$padding-small-horizontal: 0.625em;
+$padding-xs-vertical: 0.0625em;
+$padding-xs-horizontal: 0.3125em;
