--- a/assets/style/elements/buttons/build.css
+++ b/assets/style/elements/buttons/build.css
@@ -12,9 +12,9 @@
   background-image: none;
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 6px 12px;
-  font-size: 16px;
-  line-height: 1.45;
+  padding: 0.375em 0.75em;
+  font-size: 1em;
+  line-height: 1.45em;
   border-radius: 4px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -287,21 +287,21 @@ fieldset[disabled] a.btn {
     text-decoration: none; }
 
 .btn-lg {
-  padding: 10px 16px;
+  padding: 0.625em 1em;
   font-size: 1.25em;
-  line-height: 1.33333;
+  line-height: 1.33333em;
   border-radius: 6px; }
 
 .btn-sm {
-  padding: 5px 10px;
+  padding: 0.3125em 0.625em;
   font-size: 85em;
-  line-height: 1.5;
+  line-height: 1.055em;
   border-radius: 3px; }
 
 .btn-xs {
-  padding: 1px 5px;
+  padding: 0.0625em 0.3125em;
   font-size: 85em;
-  line-height: 1.5;
+  line-height: 1.055em;
   border-radius: 3px; }
 
 .btn-block {
