--- a/assets/style/elements/tables/build.css
+++ b/assets/style/elements/tables/build.css
@@ -13,7 +13,7 @@ th {
 .table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 1.45; }
+  margin-bottom: 1.45em; }
   .table > thead > tr > th,
   .table > thead > tr > td,
   .table > tbody > tr > th,
@@ -21,7 +21,7 @@ th {
   .table > tfoot > tr > th,
   .table > tfoot > tr > td {
     padding: 8px;
-    line-height: 1.45;
+    line-height: 1.45em;
     vertical-align: top;
     border-top: 1px solid #ddd; }
   .table > thead > tr > th {
@@ -188,7 +188,7 @@ table th[class*="col-"] {
   @media screen and (max-width: 767px) {
     .table-responsive {
       width: 100%;
-      margin-bottom: 1.0875;
+      margin-bottom: 1.0875em;
       overflow-y: hidden;
       -ms-overflow-style: -ms-autohiding-scrollbar;
       border: 1px solid #ddd; }
