--- a/assets/style/elements/typography/headings/build.scss
+++ b/assets/style/elements/typography/headings/build.scss
@@ -1,9 +1,72 @@
-@import 'node_modules/@houlagins/ds-tokens/color-text/index.scss';
-@import 'node_modules/@houlagins/ds-tokens/font-size/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/color-text/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/font-size/index.scss';
 
-@import 'node_modules/@houlagins/ds-tokens/line-height/index.scss';
-@import 'node_modules/@houlagins/ds-tokens/breakpoints/_variables-media.scss';
-@import 'node_modules/@houlagins/ds-tokens/font/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/line-height/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/breakpoints/_variables-media.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/font/index.scss';
+
+$headings-font-family:    inherit !default;
+$headings-font-weight:    500 !default;
+$headings-line-height:    1.1 !default;
+$headings-color:          inherit !default;
+$blockquote-small-color:  $text-color !default;
+//
+// Typography
+// --------------------------------------------------
 
 
-@import './elements/typography/headings/_type.scss';
+// Headings
+// -------------------------
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  color: $headings-color;
+
+  small,
+  .small {
+    font-weight: normal;
+    line-height: 1;
+    color: $headings-small-color;
+  }
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3 {
+  margin-top: $line-height-computed;
+  margin-bottom: ($line-height-computed / 2);
+
+  small,
+  .small {
+    font-size: 65%;
+  }
+}
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  margin-top: ($line-height-computed / 2);
+  margin-bottom: ($line-height-computed / 2);
+
+  small,
+  .small {
+    font-size: 75%;
+  }
+}
+
+h1, .h1 { font-size: $font-size-h1; }
+h2, .h2 { font-size: $font-size-h2; }
+h3, .h3 { font-size: $font-size-h3; }
+h4, .h4 { font-size: $font-size-h4; }
+h5, .h5 { font-size: $font-size-h5; }
+h6, .h6 { font-size: $font-size-h6; }
+
+
+// Body text
+// -------------------------
+
+p {
+  margin: 0 0 ($line-height-computed / 2);
+}
