--- a/assets/style/elements/typography/lists-description/build.css
+++ b/assets/style/elements/typography/lists-description/build.css
@@ -1,1 +1,1 @@
-dl{margin-top:0;margin-bottom:1.45}dt,dd{line-height:1.45}dt{font-weight:bold}dd{margin-left:0}
+dl{margin-top:0;margin-bottom:1.45em}dt,dd{line-height:1.45em}dt{font-weight:bold}dd{margin-left:0}
