--- a/assets/style/elements/typography/lists/build.css
+++ b/assets/style/elements/typography/lists/build.css
@@ -1,1 +1,1 @@
-ul,ol{margin-top:0;margin-bottom:.725}ul ul,ul ol,ol ul,ol ol{margin-bottom:0}.list-unstyled{padding-left:0;list-style:none}.list-inline{padding-left:0;list-style:none;margin-left:-5px}.list-inline>li{display:inline-block;padding-left:5px;padding-right:5px}
+ul,ol{margin-top:0;margin-bottom:.725em}ul ul,ul ol,ol ul,ol ol{margin-bottom:0}.list-unstyled{padding-left:0;list-style:none}.list-inline{padding-left:0;list-style:none;margin-left:-5px}.list-inline>li{display:inline-block;padding-left:5px;padding-right:5px}
