--- a/assets/style/layouts/base/build.css
+++ b/assets/style/layouts/base/build.css
@@ -10,13 +10,13 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: transparent; }
+  font-size: 16px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
-  line-height: 1.45;
+  font-size: 1em;
+  line-height: 1.45em;
   color: #333333;
   background-color: white; }
 
