--- a/assets/style/layouts/grid/build.css
+++ b/assets/style/layouts/grid/build.css
@@ -17,40 +17,40 @@
   float: left; }
 
 .col-xs-1 {
-  width: 5.65333%; }
+  width: 8.33333%; }
 
 .col-xs-2 {
-  width: 13.98667%; }
+  width: 16.66667%; }
 
 .col-xs-3 {
-  width: 22.32%; }
+  width: 25%; }
 
 .col-xs-4 {
-  width: 30.65333%; }
+  width: 33.33333%; }
 
 .col-xs-5 {
-  width: 38.98667%; }
+  width: 41.66667%; }
 
 .col-xs-6 {
-  width: 47.32%; }
+  width: 50%; }
 
 .col-xs-7 {
-  width: 55.65333%; }
+  width: 58.33333%; }
 
 .col-xs-8 {
-  width: 63.98667%; }
+  width: 66.66667%; }
 
 .col-xs-9 {
-  width: 72.32%; }
+  width: 75%; }
 
 .col-xs-10 {
-  width: 80.65333%; }
+  width: 83.33333%; }
 
 .col-xs-11 {
-  width: 88.98667%; }
+  width: 91.66667%; }
 
 .col-xs-12 {
-  width: 97.32%; }
+  width: 100%; }
 
 .col-xs-offset-0 {
   margin-left: 0%; }
@@ -95,29 +95,29 @@
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left; }
   .col-sm-1 {
-    width: 5.65333%; }
+    width: 8.33333%; }
   .col-sm-2 {
-    width: 13.98667%; }
+    width: 16.66667%; }
   .col-sm-3 {
-    width: 22.32%; }
+    width: 25%; }
   .col-sm-4 {
-    width: 30.65333%; }
+    width: 33.33333%; }
   .col-sm-5 {
-    width: 38.98667%; }
+    width: 41.66667%; }
   .col-sm-6 {
-    width: 47.32%; }
+    width: 50%; }
   .col-sm-7 {
-    width: 55.65333%; }
+    width: 58.33333%; }
   .col-sm-8 {
-    width: 63.98667%; }
+    width: 66.66667%; }
   .col-sm-9 {
-    width: 72.32%; }
+    width: 75%; }
   .col-sm-10 {
-    width: 80.65333%; }
+    width: 83.33333%; }
   .col-sm-11 {
-    width: 88.98667%; }
+    width: 91.66667%; }
   .col-sm-12 {
-    width: 97.32%; }
+    width: 100%; }
   .col-sm-offset-0 {
     margin-left: 0%; }
   .col-sm-offset-1 {
@@ -149,29 +149,29 @@
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left; }
   .col-md-1 {
-    width: 5.65333%; }
+    width: 8.33333%; }
   .col-md-2 {
-    width: 13.98667%; }
+    width: 16.66667%; }
   .col-md-3 {
-    width: 22.32%; }
+    width: 25%; }
   .col-md-4 {
-    width: 30.65333%; }
+    width: 33.33333%; }
   .col-md-5 {
-    width: 38.98667%; }
+    width: 41.66667%; }
   .col-md-6 {
-    width: 47.32%; }
+    width: 50%; }
   .col-md-7 {
-    width: 55.65333%; }
+    width: 58.33333%; }
   .col-md-8 {
-    width: 63.98667%; }
+    width: 66.66667%; }
   .col-md-9 {
-    width: 72.32%; }
+    width: 75%; }
   .col-md-10 {
-    width: 80.65333%; }
+    width: 83.33333%; }
   .col-md-11 {
-    width: 88.98667%; }
+    width: 91.66667%; }
   .col-md-12 {
-    width: 97.32%; }
+    width: 100%; }
   .col-md-offset-0 {
     margin-left: 0%; }
   .col-md-offset-1 {
@@ -203,29 +203,29 @@
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left; }
   .col-lg-1 {
-    width: 5.65333%; }
+    width: 8.33333%; }
   .col-lg-2 {
-    width: 13.98667%; }
+    width: 16.66667%; }
   .col-lg-3 {
-    width: 22.32%; }
+    width: 25%; }
   .col-lg-4 {
-    width: 30.65333%; }
+    width: 33.33333%; }
   .col-lg-5 {
-    width: 38.98667%; }
+    width: 41.66667%; }
   .col-lg-6 {
-    width: 47.32%; }
+    width: 50%; }
   .col-lg-7 {
-    width: 55.65333%; }
+    width: 58.33333%; }
   .col-lg-8 {
-    width: 63.98667%; }
+    width: 66.66667%; }
   .col-lg-9 {
-    width: 72.32%; }
+    width: 75%; }
   .col-lg-10 {
-    width: 80.65333%; }
+    width: 83.33333%; }
   .col-lg-11 {
-    width: 88.98667%; }
+    width: 91.66667%; }
   .col-lg-12 {
-    width: 97.32%; }
+    width: 100%; }
   .col-lg-offset-0 {
     margin-left: 0%; }
   .col-lg-offset-1 {
@@ -251,4 +251,58 @@
   .col-lg-offset-11 {
     margin-left: 91.66667%; }
   .col-lg-offset-12 {
+    margin-left: 100%; } }
+
+@media (min-width: 1608px) {
+  .col-hd-1, .col-hd-2, .col-hd-3, .col-hd-4, .col-hd-5, .col-hd-6, .col-hd-7, .col-hd-8, .col-hd-9, .col-hd-10, .col-hd-11, .col-hd-12 {
+    float: left; }
+  .col-hd-1 {
+    width: 8.33333%; }
+  .col-hd-2 {
+    width: 16.66667%; }
+  .col-hd-3 {
+    width: 25%; }
+  .col-hd-4 {
+    width: 33.33333%; }
+  .col-hd-5 {
+    width: 41.66667%; }
+  .col-hd-6 {
+    width: 50%; }
+  .col-hd-7 {
+    width: 58.33333%; }
+  .col-hd-8 {
+    width: 66.66667%; }
+  .col-hd-9 {
+    width: 75%; }
+  .col-hd-10 {
+    width: 83.33333%; }
+  .col-hd-11 {
+    width: 91.66667%; }
+  .col-hd-12 {
+    width: 100%; }
+  .col-hd-offset-0 {
+    margin-left: 0%; }
+  .col-hd-offset-1 {
+    margin-left: 8.33333%; }
+  .col-hd-offset-2 {
+    margin-left: 16.66667%; }
+  .col-hd-offset-3 {
+    margin-left: 25%; }
+  .col-hd-offset-4 {
+    margin-left: 33.33333%; }
+  .col-hd-offset-5 {
+    margin-left: 41.66667%; }
+  .col-hd-offset-6 {
+    margin-left: 50%; }
+  .col-hd-offset-7 {
+    margin-left: 58.33333%; }
+  .col-hd-offset-8 {
+    margin-left: 66.66667%; }
+  .col-hd-offset-9 {
+    margin-left: 75%; }
+  .col-hd-offset-10 {
+    margin-left: 83.33333%; }
+  .col-hd-offset-11 {
+    margin-left: 91.66667%; }
+  .col-hd-offset-12 {
     margin-left: 100%; } }
