--- a/assets/style/patterns/alerts/build.css
+++ b/assets/style/patterns/alerts/build.css
@@ -1,6 +1,6 @@
 .alert {
   padding: 15px;
-  margin-bottom: 1.45;
+  margin-bottom: 1.45em;
   border: 1px solid transparent;
   border-radius: 4px; }
   .alert h4 {
