--- a/assets/style/patterns/breadcrumbs/build.css
+++ b/assets/style/patterns/breadcrumbs/build.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 .breadcrumb {
   padding: 8px 15px;
-  margin-bottom: 1.45;
+  margin-bottom: 1.45em;
   list-style: none;
   background-color: #f5f5f5;
   border-radius: 4px; }
