--- a/assets/style/patterns/dropdowns/build.css
+++ b/assets/style/patterns/dropdowns/build.css
@@ -27,7 +27,7 @@
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
-  font-size: 16px;
+  font-size: 1em;
   text-align: left;
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -41,7 +41,7 @@
     left: auto; }
   .dropdown-menu .divider {
     height: 1px;
-    margin: -0.275 0;
+    margin: -0.275em 0;
     overflow: hidden;
     background-color: #e5e5e5; }
   .dropdown-menu > li > a {
@@ -49,7 +49,7 @@
     padding: 3px 20px;
     clear: both;
     font-weight: normal;
-    line-height: 1.45;
+    line-height: 1.45em;
     color: #333333;
     white-space: nowrap; }
 
@@ -92,7 +92,7 @@
   display: block;
   padding: 3px 20px;
   font-size: 85em;
-  line-height: 1.45;
+  line-height: 1.45em;
   color: #777777;
   white-space: nowrap; }
 
