--- a/assets/style/patterns/navs/build.scss
+++ b/assets/style/patterns/navs/build.scss
@@ -1,3 +1,14 @@
+@import 'node_modules/@biodiversity/ecosystem-tokens/color-text/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/line-height/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/border-radius/index.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/breakpoints/_variables-media.scss';
+@import 'node_modules/@biodiversity/ecosystem-tokens/grid/_variables-grid.scss';
+
+$nav-link-padding:                          10px 15px !default;
+$nav-link-hover-bg:                         #eeeeee !default;
+
+$nav-disabled-link-color:                   #777777 !default;
+$nav-disabled-link-hover-color:             #777777 !default;
 //
 // Navs
 // --------------------------------------------------
@@ -5,7 +16,26 @@
 
 // Base class
 // --------------------------------------------------
-
+@mixin clearfix() {
+  &:before,
+  &:after {
+    content: " "; // 1
+    display: table; // 2
+  }
+  &:after {
+    clear: both;
+  }
+}
+@mixin nav-divider($color: #e5e5e5) {
+  height: 1px;
+  margin: (($line-height-computed / 2) - 1) 0;
+  overflow: hidden;
+  background-color: $color;
+}
+@mixin border-top-radius($radius) {
+  border-top-right-radius: $radius;
+   border-top-left-radius: $radius;
+}
 .nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
@@ -36,7 +66,7 @@
         color: $nav-disabled-link-hover-color;
         text-decoration: none;
         background-color: transparent;
-        cursor: $cursor-disabled;
+        cursor: not-allowed;
       }
     }
   }
@@ -74,7 +104,7 @@
 
 // Give the tabs something to sit on
 .nav-tabs {
-  border-bottom: 1px solid $nav-tabs-border-color;
+  border-bottom: 1px solid #dddddd;
   > li {
     float: left;
     // Make the list-items overlay the bottom border
@@ -87,7 +117,7 @@
       border: 1px solid transparent;
       border-radius: $border-radius-base $border-radius-base 0 0;
       &:hover {
-        border-color: $nav-tabs-link-hover-border-color $nav-tabs-link-hover-border-color $nav-tabs-border-color;
+        border-color: #eeeeee #eeeeee #dddddd;
       }
     }
 
@@ -96,9 +126,9 @@
       &,
       &:hover,
       &:focus {
-        color: $nav-tabs-active-link-hover-color;
-        background-color: $nav-tabs-active-link-hover-bg;
-        border: 1px solid $nav-tabs-active-link-hover-border-color;
+        color: #777777;
+        background-color: #ffffff;
+        border: 1px solid #ffffff;
         border-bottom-color: transparent;
         cursor: default;
       }
@@ -120,7 +150,7 @@
 
     // Links rendered as pills
     > a {
-      border-radius: $nav-pills-border-radius;
+      border-radius: $border-radius-base;
     }
     + li {
       margin-left: 2px;
@@ -131,8 +161,8 @@
       &,
       &:hover,
       &:focus {
-        color: $nav-pills-active-link-hover-color;
-        background-color: $nav-pills-active-link-hover-bg;
+        color: #ffffff;
+        background-color: $link-color;
       }
     }
   }
@@ -199,18 +229,18 @@
   > .active > a,
   > .active > a:hover,
   > .active > a:focus {
-    border: 1px solid $nav-tabs-justified-link-border-color;
+    border: 1px solid #dddddd;
   }
 
   @media (min-width: $screen-sm-min) {
     > li > a {
-      border-bottom: 1px solid $nav-tabs-justified-link-border-color;
+      border-bottom: 1px solid #dddddd;
       border-radius: $border-radius-base $border-radius-base 0 0;
     }
     > .active > a,
     > .active > a:hover,
     > .active > a:focus {
-      border-bottom-color: $nav-tabs-justified-active-link-border-color;
+      border-bottom-color: #fff;
     }
   }
 }
