--- a/assets/tokens/font-size/index.custom-properties.css
+++ b/assets/tokens/font-size/index.custom-properties.css
@@ -9,5 +9,5 @@
   --font-size-h4: 1.25em;
   --font-size-h5: 16px;
   --font-size-h6: .85em;
-  --font-size-base: 16px;
+  --font-size-base: 1em;
 }
