--- a/assets/tokens/index.cssmodules.css
+++ b/assets/tokens/index.cssmodules.css
@@ -37,19 +37,19 @@
 @value font-size-h4: 1.25em;
 @value font-size-h5: 16px;
 @value font-size-h6: .85em;
-@value font-size-base: 16px;
+@value font-size-base: 1em;
 /* Unitless line-heights for reusability */
 @value line-height-base: 1.45em;
 /* Unitless line-heights for reusability */
 @value line-height-computed: 1.45em;
 @value headings-line-height: 1.1em;
 @value line-height-large: 1.3333333em;
-@value line-height-small: 1.5em;
-@value padding-base-vertical: 6px;
-@value padding-base-horizontal: 12px;
-@value padding-large-vertical: 10px;
-@value padding-large-horizontal: 16px;
-@value padding-small-vertical: 5px;
-@value padding-small-horizontal: 10px;
-@value padding-xs-vertical: 1px;
-@value padding-xs-horizontal: 5px;
+@value line-height-small: 1.055em;
+@value padding-base-vertical: 0.375em;
+@value padding-base-horizontal: 0.75em;
+@value padding-large-vertical: 0.625em;
+@value padding-large-horizontal: 1em;
+@value padding-small-vertical: 0.3125em;
+@value padding-small-horizontal: 0.625em;
+@value padding-xs-vertical: 0.0625em;
+@value padding-xs-horizontal: 0.3125em;
