--- a/assets/tokens/index.scss
+++ b/assets/tokens/index.scss
@@ -37,19 +37,19 @@ $font-size-h3: 1.7em;
 $font-size-h4: 1.25em;
 $font-size-h5: 16px;
 $font-size-h6: .85em;
-$font-size-base: 16px;
+$font-size-base: 1em;
 // Unitless line-heights for reusability
 $line-height-base: 1.45em;
 // Unitless line-heights for reusability
 $line-height-computed: 1.45em;
 $headings-line-height: 1.1em;
 $line-height-large: 1.3333333em;
-$line-height-small: 1.5em;
-$padding-base-vertical: 6px;
-$padding-base-horizontal: 12px;
-$padding-large-vertical: 10px;
-$padding-large-horizontal: 16px;
-$padding-small-vertical: 5px;
-$padding-small-horizontal: 10px;
-$padding-xs-vertical: 1px;
-$padding-xs-horizontal: 5px;
+$line-height-small: 1.055em;
+$padding-base-vertical: 0.375em;
+$padding-base-horizontal: 0.75em;
+$padding-large-vertical: 0.625em;
+$padding-large-horizontal: 1em;
+$padding-small-vertical: 0.3125em;
+$padding-small-horizontal: 0.625em;
+$padding-xs-vertical: 0.0625em;
+$padding-xs-horizontal: 0.3125em;
