--- a/assets/tokens/spacing/index.cssmodules.css
+++ b/assets/tokens/spacing/index.cssmodules.css
@@ -1,9 +1,9 @@
 
-@value padding-base-vertical: 6px;
-@value padding-base-horizontal: 12px;
-@value padding-large-vertical: 10px;
-@value padding-large-horizontal: 16px;
-@value padding-small-vertical: 5px;
-@value padding-small-horizontal: 10px;
-@value padding-xs-vertical: 1px;
-@value padding-xs-horizontal: 5px;
+@value padding-base-vertical: 0.375em;
+@value padding-base-horizontal: 0.75em;
+@value padding-large-vertical: 0.625em;
+@value padding-large-horizontal: 1em;
+@value padding-small-vertical: 0.3125em;
+@value padding-small-horizontal: 0.625em;
+@value padding-xs-vertical: 0.0625em;
+@value padding-xs-horizontal: 0.3125em;
