--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -5,11 +5,11 @@
 @import url('assets/style/modifiers/helpers/build.min.css');
 @import url('assets/style/modifiers/text/build.min.css');
 
-
+.debugB {
+  border: 1px solid blue;
+}
 .debug {
   border: 1px solid red;
-  min-width: 5px;
-  min-height: 5px;
 }
 body {
   margin:0;
