--- a/assets/tokens/font-size/index.cssmodules.css
+++ b/assets/tokens/font-size/index.cssmodules.css
@@ -3,7 +3,7 @@
 @value font-size-large: 1.25em;
 @value font-size-h1: 2.6em;
 @value font-size-h2: 2.15em;
-@value font-size-small: 85em;
+@value font-size-small: .85em;
 @value font-size-h3: 1.7em;
 @value font-size-h4: 1.25em;
 @value font-size-h5: 16px;
