--- a/assets/tokens/font-size/index.custom-properties.css
+++ b/assets/tokens/font-size/index.custom-properties.css
@@ -4,7 +4,7 @@
   --font-size-large: 1.25em;
   --font-size-h1: 2.6em;
   --font-size-h2: 2.15em;
-  --font-size-small: 85em;
+  --font-size-small: .85em;
   --font-size-h3: 1.7em;
   --font-size-h4: 1.25em;
   --font-size-h5: 16px;
