--- a/assets/style/patterns/tooltip/build.scss
+++ b/assets/style/patterns/tooltip/build.scss
@@ -1,9 +1,46 @@
-//
-// Tooltips
-// --------------------------------------------------
+@import 'node_modules/@scbd/ecosystem-tokens/font-size/index.scss';
+@import 'node_modules/@scbd/ecosystem-tokens/border-radius/index.scss';
+@import 'node_modules/@scbd/ecosystem-tokens/line-height/index.scss';
 
+$font-family-base:        "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+@mixin opacity($opacity) {
+  opacity: $opacity;
+  // IE8 filter
+  $opacity-ie: ($opacity * 100);
+  filter: alpha(opacity=$opacity-ie);
+}
+@mixin reset-text() {
+  font-family: $font-family-base;
+  // We deliberately do NOT reset font-size.
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-break: auto;
+  line-height: $line-height-base;
+  text-align: left; // Fallback for where `start` is not supported
+  text-align: start;
+  text-decoration: none;
+  text-shadow: none;
+  text-transform: none;
+  white-space: normal;
+  word-break: normal;
+  word-spacing: normal;
+  word-wrap: normal;
+}
+//** Tooltip max width
+$tooltip-max-width:           200px ;
+//** Tooltip text color
+$tooltip-color:               #fff ;
+//** Tooltip background color
+$tooltip-bg:                  #000 ;
+$tooltip-opacity:             .9 ;
 
-// Base class
+//** Tooltip arrow width
+$tooltip-arrow-width:         5px ;
+//** Tooltip arrow color
+$tooltip-arrow-color:         $tooltip-bg ;
+$zindex-tooltip:              1070 !default;
+
 .tooltip {
   position: absolute;
   z-index: $zindex-tooltip;
@@ -40,26 +77,12 @@
   border-color: transparent;
   border-style: solid;
 }
-// Note: Deprecated .top-left, .top-right, .bottom-left, and .bottom-right as of v3.3.1
+
 .tooltip {
   &.top .tooltip-arrow {
     bottom: 0;
     left: 50%;
     margin-left: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-top-color: $tooltip-arrow-color;
-  }
-  &.top-left .tooltip-arrow {
-    bottom: 0;
-    right: $tooltip-arrow-width;
-    margin-bottom: -$tooltip-arrow-width;
-    border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
-    border-top-color: $tooltip-arrow-color;
-  }
-  &.top-right .tooltip-arrow {
-    bottom: 0;
-    left: $tooltip-arrow-width;
-    margin-bottom: -$tooltip-arrow-width;
     border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
     border-top-color: $tooltip-arrow-color;
   }
@@ -81,20 +104,6 @@
     top: 0;
     left: 50%;
     margin-left: -$tooltip-arrow-width;
-    border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-bottom-color: $tooltip-arrow-color;
-  }
-  &.bottom-left .tooltip-arrow {
-    top: 0;
-    right: $tooltip-arrow-width;
-    margin-top: -$tooltip-arrow-width;
-    border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
-    border-bottom-color: $tooltip-arrow-color;
-  }
-  &.bottom-right .tooltip-arrow {
-    top: 0;
-    left: $tooltip-arrow-width;
-    margin-top: -$tooltip-arrow-width;
     border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
     border-bottom-color: $tooltip-arrow-color;
   }
